2005-11-23 WinMerge experimental release 2.5.0.2 (cvs)

2005-11-22 Tim
 PATCH: [ 1363114 ] Add '*.ctl;*.pag;*.dsr' to Visual Basic highlighter
  Src/editlib: ccrystaltextview.cpp

2005-11-22 Kimmo
 PATCH: [ 1362882 ] Remove option for autoclosing compare statepane
  Src: Merge.rc OptionsDef.h OptionsInit.cpp PropGeneral.cpp PropGeneral.h resource.h
  Src/Languages: *.rc resource.h
 BUG: [ 1355884 ] 2.4.2 fails to open dvd files
  File/folder selection dialog couldn't open read-only folders
  Src: OpenDlg.cpp

2005-11-22 Perry
 PATCH: [ 1334277 ] Show asterisk in #diffs for QuickCompare results
  Src: DiffWrapper.cpp DiffWrapper.h DirViewColItems.cpp
 PATCH: [ 1334589 ] Encoding maps for Expat parser, for DisplayXmlFiles plugin
  Plugins/src_VCPP/DisplayXMLFiles
 BUG: [ 1277320 ] Plugins.txt not up-to-date
  Plugins/dll/IgnoreCommentsC

2005-11-19 Jochen
 Merge7z DllBuild 0017
  Merge7z: StdAfx.h Merge7zCommon.cpp Merge7zCommon.h revision.txt
  Merge7z new files: Merge7z430.dsp
  Merge7zInstaller: Files.rc2 Installer.cpp Merge7zInstaller.dsp

2005-11-18 Kimmo
 PATCH: [ 1358408 ] Import and export for options
  Src: Merge.rc resource.h
  Src/Common: OptionsMgr.cpp OptionsMgr.h PreferencesDlg.cpp PreferencesDlg.h
  Src/Languages: *.rc resource.h

2005-11-17 Kimmo
 PATCH: [ 1349645 ] Folder Compare Statistics dialog
 PATCH: [ 1347787 ] Use non-modal dialog for dir compare status
  Src: DirDoc.cpp DirDoc.h DirFrame.cpp DirFrame.h DirView.cpp DirView.h Merge.cpp Merge.dsp
   Merge.rc resource.h
  Src new files: CompareStatisticsDlg.cpp CompareStatisticsDlg.h DirCompProgressDlg.cpp
   DirCompProgressDlg.h
  Src deleted files: DirCompStateBar.cpp DirCompStateBar.h
  Src/res new file: sigma.bmp
  Src/Languages: *.rc resource.h

2005-11-16 Kimmo
 PATCH: [ 1356783 ] Use OptionsMgr in SyntaxColors class
  Src: MainFrm.cpp SyntaxColors.cpp SyntaxColors.h

2005-11-09 Kimmo
 PATCH: [ 1350638 ] Move options read/write code to options panels